--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,5 +16,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
     <PackageVersion Include="Nethereum.Signer" Version="4.21.4" />
+    <PackageVersion Include="ZXing.Net" Version="0.16.9" />
   </ItemGroup>
 </Project>
