--- a/src/Reown.Sign.Unity/Reown.Sign.Unity.csproj
+++ b/src/Reown.Sign.Unity/Reown.Sign.Unity.csproj
@@ -6,11 +6,7 @@
         <PackageId>Reown.Sign.Unity</PackageId>
         <Title>Reown.Sign.Unity</Title>
         <Authors>skibitsky</Authors>
-        <Copyright>Copyright (c) Reown 2024</Copyright>
-        <PackageProjectUrl>https://reown.com/</PackageProjectUrl>
-        <RepositoryUrl>https://github.com/reown-com/reown-dotnet</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     </PropertyGroup>
     
