--- a/src/Reown.WalletKit/Reown.WalletKit.csproj
+++ b/src/Reown.WalletKit/Reown.WalletKit.csproj
@@ -5,11 +5,20 @@
         <AssemblyVersion>$(DefaultVersion)</AssemblyVersion>
         <PackageId>Reown.WalletKit</PackageId>
         <Title>Reown.WalletKit</Title>
+        <Description>The ultimate toolkit for building and connecting wallets.</Description>
         <Authors>pedrouid, gigajuwels, edkek, skibitsky</Authors>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <PackageIcon>walletkit-icon.png</PackageIcon>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
     <ItemGroup>
       <ProjectReference Include="..\Reown.Sign\Reown.Sign.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="..\..\media\walletkit-icon.png" Pack="True" PackagePath="\">
+        <Link>walletkit-icon.png</Link>
+      </None>
+      <None Include="README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 </Project>
