--- a/src/Reown.Sign.Nethereum.Unity/Reown.Sign.Nethereum.Unity.csproj
+++ b/src/Reown.Sign.Nethereum.Unity/Reown.Sign.Nethereum.Unity.csproj
@@ -8,6 +8,7 @@
         <Authors>skibitsky</Authors>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
