--- a/src/Reown.Sign/Reown.Sign.csproj
+++ b/src/Reown.Sign/Reown.Sign.csproj
@@ -12,4 +12,7 @@
     <ItemGroup>
         <ProjectReference Include="..\Reown.Core\Reown.Core.csproj"/>
     </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Nethereum.Signer"/>
+    </ItemGroup>
 </Project>
