--- a/.github/workflows/unity-bulid-test.yml
+++ b/.github/workflows/unity-bulid-test.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   buildForAllSupportedPlatforms:
+    if: github.event.pull_request.draft == false
     name: Build for ${{ matrix.targetPlatform }}
     runs-on: ubuntu-latest
     strategy:
