--- a/src/Reown.AppKit.Unity/package.json
+++ b/src/Reown.AppKit.Unity/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.reown.appkit.unity",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "displayName": "Reown.AppKit.Unity",
   "unity": "2022.3",
   "author": "Reown",
@@ -12,9 +12,10 @@
     "web3"
   ],
   "dependencies": {
-    "com.reown.sign.nethereum": "1.0.0",
-    "com.reown.sign.unity": "1.0.0",
-    "com.reown.unity.dependencies": "1.0.0",
+    "com.reown.sign.nethereum.unity": "1.0.1",
+    "com.reown.sign.unity": "1.0.1",
+    "com.reown.core": "1.0.1",
+    "com.reown.unity.dependencies": "1.0.1",
     "com.unity.vectorgraphics": "2.0.0-preview.24"
   }
 }
