--- a/.github/workflows/unity-bulid-test.yml
+++ b/.github/workflows/unity-bulid-test.yml
@@ -63,7 +63,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: Build-WebGL
-          path: Builds/WebGL/WebGL
+          path: Builds/WebGL/WebGL/
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v20
         with:
@@ -72,4 +72,4 @@ jobs:
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           github-comment: true
-          working-directory: Builds/WebGL/WebGL
+          working-directory: Builds/WebGL/WebGL/
