--- a/sample/Reown.AppKit.Unity/Packages/manifest.json
+++ b/sample/Reown.AppKit.Unity/Packages/manifest.json
@@ -16,6 +16,7 @@
     "com.skibitsky.scene-reference": "1.1.1",
     "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.mobile.android-logcat": "1.4.3",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.test-framework": "1.1.33",
