--- a/sample/Reown.AppKit.Unity/.gitignore
+++ b/sample/Reown.AppKit.Unity/.gitignore
@@ -16,7 +16,7 @@
 !/[Bb]uilds/WebGL/
 !/[Bb]uilds/WebGL/WebGL/
 /[Bb]uilds/WebGL/WebGL/**
-!/[Bb]uilds/WebGL/WebGL/vercel.json
+!/[Bb]uilds/WebGL/vercel.json
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
