Revert sample project gitignore

--- a/sample/Reown.AppKit.Unity/.gitignore
+++ b/sample/Reown.AppKit.Unity/.gitignore
@@ -7,16 +7,9 @@
 /[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
+/[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
-
-
-/[Bb]uilds/**
-!/[Bb]uilds/
-!/[Bb]uilds/WebGL/
-!/[Bb]uilds/WebGL/WebGL/
-/[Bb]uilds/WebGL/WebGL/**
-!/[Bb]uilds/WebGL/vercel.json
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
@@ -86,4 +79,3 @@ crashlytics-build.properties
 # SonarQube Plugin
 # https://plugins.jetbrains.com/plugin/7238-sonarqube-community-plugin
 .idea/**/sonarIssues.xml
-
