--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -27,4 +27,4 @@ runs:
       env:
         RELAY_ENDPOINT: ${{ inputs.relay-endpoint }}
         PROJECT_ID: ${{ inputs.project-id }}
-      run: dotnet test Reown.NoUnity.slnf --verbosity minimal --filter Category=integration
+      run: dotnet test Reown.NoUnity.slnf --verbosity detailed --filter Category=integration
