--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -11,6 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
+        dotnet-version: [7.0.x, 8.0.x]
         test-type: [unit-tests, integration-tests]
     runs-on: ${{ matrix.os }}
 
@@ -20,8 +21,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: |
-            8.0.x
+          dotnet-version: ${{ matrix.dotnet-version }}
 
       - name: Run tests
         uses: ./.github/actions/test-dotnet
