--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -22,7 +22,7 @@ runs:
     - name: Run tests
       if: inputs.type == 'unit-tests'
       shell: bash
-      run: dotnet test Reown.NoUnity.slnf --verbosity minimal --filter Category=unit --framework net${{ inputs.dotnet-version }}
+      run: dotnet test Reown.NoUnity.slnf --verbosity minimal --filter Category=unit --framework net$(echo ${{ inputs.dotnet-version }} | cut -d'.' -f1).0
 
     - name: Run integration tests
       if: inputs.type == 'integration-tests'
@@ -30,4 +30,4 @@ runs:
       env:
         RELAY_ENDPOINT: ${{ inputs.relay-endpoint }}
         PROJECT_ID: ${{ inputs.project-id }}
-      run: dotnet test Reown.NoUnity.slnf --verbosity normal --filter Category=integration --framework net${{ inputs.dotnet-version }}
+      run: dotnet test Reown.NoUnity.slnf --verbosity normal --filter Category=integration --framework net$(echo ${{ inputs.dotnet-version }} | cut -d'.' -f1).0
