--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        dotnet-version: [7.0.x, 8.0.x]
+        dotnet-version: [8.0.x]
         test-type: [unit-tests, integration-tests]
     runs-on: ${{ matrix.os }}
 
