--- a/test/Rown.TestUtils/Rown.TestUtils.csproj
+++ b/test/Rown.TestUtils/Rown.TestUtils.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Nethereum.HdWallet"/>
+        <PackageReference Include="xunit.abstractions" />
     </ItemGroup>
 
     <ItemGroup>
