Remove dependency on Microsoft.IdentityModel.Tokens

--- a/src/Reown.Core.Common/Runtime/Reown.Core.Common.asmdef
+++ b/src/Reown.Core.Common/Runtime/Reown.Core.Common.asmdef
@@ -1,12 +1,14 @@
 {
-  "name": "Reown.Core.Common",
-  "rootNamespace": "Reown.Core.Common",
-  "references": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "Reown.Core.Common",
+    "rootNamespace": "Reown.Core.Common",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": true,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
