--- a/src/Reown.Core.Common/Reown.Core.Common.csproj
+++ b/src/Reown.Core.Common/Reown.Core.Common.csproj
@@ -8,6 +8,7 @@
         <Authors>pedrouid, gigajuwels, edkek, skibitsky</Authors>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json"/>
