--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -14,6 +14,7 @@ jobs:
         dotnet-version: [8.0.x]
         test-type: [unit-tests, integration-tests]
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
 
     steps:
       - uses: actions/checkout@v4
