--- a/.github/workflows/sync-unity-package-version.yml
+++ b/.github/workflows/sync-unity-package-version.yml
@@ -35,7 +35,13 @@ jobs:
       - name: Sync Unity Package Version
         run: dotnet-script ./.github/scripts/sync-unity-version.csx
 
+      - name: Check for changes
+        id: git-check
+        run: |
+          git diff --quiet || echo "changes=true" >> $GITHUB_OUTPUT
+
       - name: Commit changes
+        if: steps.git-check.outputs.changes == 'true'
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
