Fix hard dependency on old input system

--- a/src/Reown.AppKit.Unity/Runtime/Reown.AppKit.Unity.asmdef
+++ b/src/Reown.AppKit.Unity/Runtime/Reown.AppKit.Unity.asmdef
@@ -12,7 +12,8 @@
         "GUID:3805033990d4443be83aec321a6e5fbf",
         "GUID:9c7cef66539e7483292da86e62f54380",
         "GUID:3ba425f2c6e24e6ea79fbce0299c4ea7",
-        "GUID:68550284b645f4b9894995579f34290a"
+        "GUID:68550284b645f4b9894995579f34290a",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
