Update issue templates

--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -3,7 +3,15 @@ name: .NET Build & Test
 on:
   push:
     branches: [ develop ]
+    paths-ignore:
+      - '**.md'
+      - '.editorconfig'
+      - '.github/ISSUE_TEMPLATE/**'
   pull_request:
+    paths-ignore:
+      - '**.md'
+      - '.editorconfig'
+      - '.github/ISSUE_TEMPLATE/**'
   workflow_dispatch:
 
 jobs:
