--- a/.github/workflows/unity-bulid-test.yml
+++ b/.github/workflows/unity-bulid-test.yml
@@ -56,7 +56,7 @@ jobs:
       fail-fast: false
       matrix:
         projectPath:
-          - test-package
+          - 'sample/Reown.AppKit.Unity'
         unityVersion: 
           - '6000.0.41f1' # some version must be included for package testing
         testMode:
@@ -74,6 +74,8 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           packageMode: true
+          scopedRegistryUrl: https://package.openupm.com
+          registryScopes: 'com.reown, com.nethereum.unity'
           projectPath: ${{ matrix.projectPath }}
           unityVersion: ${{ matrix.unityVersion }}
           testMode: ${{ matrix.testMode }}
