Run package tests as ‘project’ tests

--- a/.github/workflows/unity-bulid-test.yml
+++ b/.github/workflows/unity-bulid-test.yml
@@ -73,9 +73,9 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          packageMode: true
-          scopedRegistryUrl: https://package.openupm.com
-          registryScopes: 'com.reown, com.nethereum.unity'
+          # packageMode: true
+          # scopedRegistryUrl: https://package.openupm.com
+          # registryScopes: 'com.reown, com.nethereum.unity'
           projectPath: ${{ matrix.projectPath }}
           unityVersion: ${{ matrix.unityVersion }}
           testMode: ${{ matrix.testMode }}
