--- a/.github/workflows/unity-bulid-test.yml
+++ b/.github/workflows/unity-bulid-test.yml
@@ -60,7 +60,8 @@ jobs:
       fail-fast: false
       matrix:
         projectPath:
-          - 'src/Reown.Sign.Unity'
+          - 'sample/Reown.AppKit.Unity'
+          # - 'src/Reown.Sign.Unity'
         unityVersion: 
           - '6000.0.41f1' # some version must be included for package testing
         testMode:
@@ -77,9 +78,9 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          packageMode: true
-          scopedRegistryUrl: https://package.openupm.com
-          registryScopes: 'com.reown, com.nethereum.unity'
+          # packageMode: true
+          # scopedRegistryUrl: https://package.openupm.com
+          # registryScopes: 'com.reown, com.nethereum.unity'
           projectPath: ${{ matrix.projectPath }}
           unityVersion: ${{ matrix.unityVersion }}
           testMode: ${{ matrix.testMode }}
