--- a/sample/Reown.AppKit.Unity/Packages/manifest.json
+++ b/sample/Reown.AppKit.Unity/Packages/manifest.json
@@ -19,6 +19,7 @@
     "com.unity.mobile.android-logcat": "1.4.5",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.test-framework": "1.4.6",
+    "com.unity.testtools.codecoverage": "1.2.6",
     "com.unity.ugui": "2.0.0",
     "com.yasirkula.ingamedebugconsole": "1.6.8",
     "io.sentry.unity": "3.1.0",
