--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,19 +3,20 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="Nethereum.HdWallet" Version="4.26.0" />
-    <PackageVersion Include="Nethereum.Web3" Version="4.26.0" />
+    <PackageVersion Include="BouncyCastle.Cryptography" Version="2.6.1" />
+    <PackageVersion Include="Nethereum.HdWallet" Version="5.0.0" />
+    <PackageVersion Include="Nethereum.Web3" Version="5.0.0" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageVersion Include="Portable.BouncyCastle" Version="1.9.0" />
+    <PackageVersion Include="NUnit" Version="3.5.0" />
     <PackageVersion Include="Websocket.Client" Version="5.1.2" />
     <PackageVersion Include="xunit" Version="2.9.2" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
     <PackageVersion Include="xunit.abstractions" Version="2.0.3" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
-    <PackageVersion Include="Nethereum.Signer" Version="4.26.0" />
-    <PackageVersion Include="ZXing.Net" Version="0.16.9" />
+    <PackageVersion Include="Nethereum.Signer" Version="5.0.0" />
+    <PackageVersion Include="ZXing.Net" Version="0.16.10" />
   </ItemGroup>
 </Project>
