--- a/.github/ISSUE_TEMPLATE/unity_appkit_bug.yml
+++ b/.github/ISSUE_TEMPLATE/unity_appkit_bug.yml
@@ -1,14 +1,15 @@
 name: 🐛👾 Unity AppKit Bug Report
 description: Report a reproducible bug or regression in AppKit for Unity.
-title: '[bug]: '
-labels: ['bug', 'needs review', 'unity']
+title: "[bug]: "
+labels: ["bug", "needs review", "unity"]
+assignees: ["skibitsky"]
 body:
   - type: markdown
     attributes:
       value: |
         # Unity AppKit Bug Report
         Thank you for taking the time to file a bug report. Complete the form below with as much detail as possible to help us reproduce and fix the issue.
-        
+
         Before submitting, please:
         - Test with the [latest SDK release](https://github.com/reown-com/reown-dotnet/releases) to ensure the issue hasn't been fixed
         - Search [existing issues](https://github.com/reown-com/reown-dotnet/issues?q=is%3Aissue%20) to avoid duplicates
