--- a/sample/Reown.AppKit.Unity/Packages/manifest.json
+++ b/sample/Reown.AppKit.Unity/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.reown.sign.nethereum": "file:./../../../src/Reown.Sign.Nethereum",
     "com.reown.sign.nethereum.unity": "file:./../../../src/Reown.Sign.Nethereum.Unity",
     "com.reown.sign.unity": "file:./../../../src/Reown.Sign.Unity",
+    "com.reown.walletkit": "file:./../../../src/Reown.WalletKit",
     "com.reown.unity.dependencies": "file:./../../../src/Reown.Unity.Dependencies",
     "com.skibitsky.scene-reference": "1.1.1",
     "com.unity.ide.rider": "3.0.36",
