--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,7 @@ updates:
   # ─── NuGet dependencies ──────────────────────────────────────────────────────
   - package-ecosystem: "nuget" # Dependabot speaks "nuget", not "dotnet"
     directory: "/"
+    target-branch: "develop"
     schedule:
       interval: "weekly"
       day: "monday"
@@ -37,6 +38,7 @@ updates:
   # ─── GitHub Actions used in the repo ──────────────────────────────────────────
   - package-ecosystem: "github-actions"
     directory: "/"
+    target-branch: "develop"
     schedule:
       interval: "weekly"
       day: "monday"
