--- a/.github/workflows/unity-bulid-test.yml
+++ b/.github/workflows/unity-bulid-test.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         projectPath:
-          - 'sample/Reown.AppKit.Unity'
+          - "sample/Reown.AppKit.Unity"
         targetPlatform:
           # - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
           # - StandaloneWindows # Build a Windows standalone.
@@ -39,7 +39,7 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          unityVersion: '6000.1.5f1'
+          unityVersion: "6000.1.5f1"
           buildsPath: Builds
           projectPath: ${{ matrix.projectPath }}
           targetPlatform: ${{ matrix.targetPlatform }}
@@ -60,12 +60,12 @@ jobs:
       fail-fast: false
       matrix:
         projectPath:
-          - 'sample/Reown.AppKit.Unity'
+          - "sample/Reown.AppKit.Unity"
           # - 'src/Reown.Sign.Unity'
-        unityVersion: 
-          - '6000.1.5f1' # some version must be included for package testing
+        unityVersion:
+          - "6000.1.5f1" # some version must be included for package testing
         testMode:
-          # - playmode
+          - playmode
           - editmode
     steps:
       - uses: actions/checkout@v4
@@ -87,7 +87,7 @@ jobs:
           artifactsPath: ${{ matrix.testMode }}-artifacts
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           checkName: ${{ matrix.testMode }} Test Results
-          coverageOptions: 'generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+my.assembly.*'
+          coverageOptions: "generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+my.assembly.*"
       - uses: actions/upload-artifact@v4
         if: always()
         with:
