Try to enable coverage in CI

--- a/.github/workflows/unity-bulid-test.yml
+++ b/.github/workflows/unity-bulid-test.yml
@@ -93,17 +93,17 @@ jobs:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           checkName: ${{ matrix.testMode }} Test Results
           #          coverageOptions: "generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+my.assembly.*"
-#          coverageOptions: "generateAdditionalMetrics;generateHtmlReport;assemblyFilters:+Reown.*"
+          coverageOptions: "generateAdditionalMetrics;generateHtmlReport;assemblyFilters:+Reown.*"
       - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: Test results for ${{ matrix.testMode }}
           path: ${{ steps.tests.outputs.artifactsPath }}
-#      - uses: actions/upload-artifact@v4
-#        if: always()
-#        with:
-#          name: Coverage results for ${{ matrix.testMode }}
-#          path: ${{ steps.tests.outputs.coveragePath }}
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: Coverage results for ${{ matrix.testMode }}
+          path: ${{ steps.tests.outputs.coveragePath }}
 
   deployToVercel:
     name: Deploy to Vercel
