--- a/playground/Reown.RoninSample.Unity/Packages/manifest.json
+++ b/playground/Reown.RoninSample.Unity/Packages/manifest.json
@@ -1,16 +1,17 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.7.1",
+    "com.reown.appkit.unity": "1.4.0",
+    "com.unity.collab-proxy": "2.8.2",
     "com.unity.feature.2d": "2.0.1",
-    "com.unity.ide.rider": "3.0.31",
-    "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.inputsystem": "1.13.1",
+    "com.unity.ide.rider": "3.0.36",
+    "com.unity.ide.visualstudio": "2.0.23",
+    "com.unity.inputsystem": "1.14.0",
     "com.unity.multiplayer.center": "1.0.0",
-    "com.unity.render-pipelines.universal": "17.0.4",
-    "com.unity.test-framework": "1.4.6",
+    "com.unity.render-pipelines.universal": "17.1.0",
+    "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
-    "com.unity.visualscripting": "1.9.5",
+    "com.unity.visualscripting": "1.9.7",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -42,8 +43,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.reown.appkit.unity": "1.4.0"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
