--- a/src/Reown.Core.Common/Reown.Core.Common.csproj
+++ b/src/Reown.Core.Common/Reown.Core.Common.csproj
@@ -7,10 +7,11 @@
         <Title>Reown.Core.Common</Title>
         <Authors>pedrouid, gigajuwels, edkek, skibitsky</Authors>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <ItemGroup>
+        <None Include="LICENSE.md" Pack="true" PackagePath=""/>
         <PackageReference Include="Newtonsoft.Json"/>
     </ItemGroup>
 </Project>
