--- a/src/Reown.Core.Network.WebSocket/Reown.Core.Network.WebSocket.csproj
+++ b/src/Reown.Core.Network.WebSocket/Reown.Core.Network.WebSocket.csproj
@@ -7,9 +7,10 @@
         <Title>Reown.Core.Network.WebSocket</Title>
         <Authors>pedrouid, gigajuwels, edkek, skibitsky</Authors>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     </PropertyGroup>
     <ItemGroup>
+        <None Include="LICENSE.md" Pack="true" PackagePath=""/>
         <PackageReference Include="Websocket.Client"/>
     </ItemGroup>
     <ItemGroup>
