--- a/src/Reown.Sign.Unity/Reown.Sign.Unity.csproj
+++ b/src/Reown.Sign.Unity/Reown.Sign.Unity.csproj
@@ -7,11 +7,12 @@
         <Title>Reown.Sign.Unity</Title>
         <Authors>skibitsky</Authors>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
+        <None Include="LICENSE.md" Pack="true" PackagePath=""/>
         <ProjectReference Include="..\Reown.Sign\Reown.Sign.csproj"/>
         <Reference Include="UnityEngine">
             <HintPath>$(UnityDllPath)</HintPath>
