--- a/.github/workflows/sync-unity-package-version.yml
+++ b/.github/workflows/sync-unity-package-version.yml
@@ -4,7 +4,10 @@ on:
     branches:
       - develop
     paths:
-      - 'src/Directory.Build.props'
+      - "src/Directory.Build.props"
+  pull_request:
+    paths:
+      - "src/Directory.Build.props"
   workflow_dispatch:
 
 permissions:
