--- a/src/Reown.AppKit.Unity/Reown.AppKit.Unity.csproj
+++ b/src/Reown.AppKit.Unity/Reown.AppKit.Unity.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
         <ProjectReference Include="..\Reown.Sign.Nethereum.Unity\Reown.Sign.Nethereum.Unity.csproj"/>
         <ProjectReference Include="..\Reown.Sign.Unity\Reown.Sign.Unity.csproj"/>
+        <ProjectReference Include="..\Reown.Sign\Reown.Sign.csproj"/>
         <Reference Include="UnityEngine">
             <HintPath>$(UnityDllPath)</HintPath>
         </Reference>
@@ -21,6 +22,7 @@
 
     <ItemGroup>
         <PackageReference Include="ZXing.Net"/>
+        <PackageReference Include="BouncyCastle.Cryptography"/>
     </ItemGroup>
 
 </Project>
