--- a/playground/Reown.SolanaSdk.Unity/Packages/manifest.json
+++ b/playground/Reown.SolanaSdk.Unity/Packages/manifest.json
@@ -23,6 +23,7 @@
     "com.unity.timeline": "1.8.9",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.7",
+    "com.yasirkula.ingamedebugconsole": "https://github.com/yasirkula/UnityIngameDebugConsole.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
